--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.20.6",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "react": "^17.0.2",
     "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.2",
