--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
     "@types/node": "^12.20.6",
     "@types/react-dom": "^17.0.3",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
+    "react-bootstrap-carousel": "^4.1.1",
     "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
