--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^26.0.21",
     "@types/node": "^12.20.6",
     "@types/react-dom": "^17.0.3",
+    "@types/react-star-rating-component": "^1.4.0",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "dotenv": "^8.2.0",
@@ -21,6 +22,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-star-rating-component": "^1.4.1",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.1"
   },
