--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap-carousel": "^4.1.1",
     "react-bootstrap-icons": "^1.4.0",
     "react-dom": "^17.0.2",
+    "react-paginate": "^7.1.2",
     "react-player": "^2.9.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^5.2.0",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.3",
+    "@types/react-paginate": "^6.2.1",
     "@types/react-router-dom": "^5.1.7"
   }
 }
